syntax = "proto3";

package pb;

service Articlesvc {
  rpc GetCategories (GetCategoriesRequest) returns (GetCategoriesResponse) {
  }
}

// GetCategories
message GetCategoriesRequest {
}

message GetCategoriesResponse {
  int64 count = 1;
  repeated CategoryResponse data = 2;
}

message CategoryResponse {
  int32 id = 1;
  string name = 2;
}